--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "start": "parcel watch dist/index.html"
+    "start": "parcel dist/index.html"
   },
   "keywords": [],
   "author": "",
