--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "rimraf dist/ && parcel build src/index.html",
     "start": "parcel dist/index.html"
   },
   "keywords": [],
