updating post-receive

--- a/post-receive.sample
+++ b/post-receive.sample
@@ -1,3 +1,3 @@
 #/bin/sh
-git --work-tree=/home/user/website --git-dir=/home/user/website.git checkout -f
+git --work-tree=/home/user/website.git --git-dir=/home/user/website checkout -f
 
